src/objects/PF_Defects__c.object
<CustomObject>
    <description>pForce</description>
    <fields>
        <fullName>Functionality__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Functionality</label>
        <referenceTo>Functionality__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PF_Actual_Result__c</fullName>
        <label>Actual Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PF_Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PF_Expected_Result__c</fullName>
        <label>Expected Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_Open_Date__c</fullName>
        <label>Open Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Planned_Fixed_Date__c</fullName>
        <label>Planned Fixed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Resolution_Type__c</fullName>
        <label>Resolution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Steps_to_Reproduce__c</fullName>
        <label>Steps to Reproduce</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PF_Test_Case__c</fullName>
        <label>Test Case</label>
        <referenceTo>PF_TestCases__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PF_Testing_Cycle__c</fullName>
        <label>Testing Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>DEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Code Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spec Defect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Defect</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DF-{00000}</displayFormat>
        <label>Defect #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <recordTypes>
        <fullName>Component_Test_Defect</fullName>
        <active>false</active>
        <label>Component Test Defect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unit_Test_Defect</fullName>
        <active>true</active>
        <label>Unit Test Defect</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>